[package]
name = "aig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aiger = { git = "https://github.com/gipsyh/aiger-rust.git" }
rand = "0.8.5"
minisat = "0.4.4"
abc-glucose = { git = "https://github.com/gipsyh/abc-glucose.git" }
