[package]
name = "aig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aiger = { git = "https://github.com/gipsyh/aiger-rust.git" }
rand = "0.8.5"
minisat = { path = "../minisat-rs" }
abc-glucose = { path = "../abc-glucose" }
glucose = { path = "../glucose" }
biodivine-lib-bdd = { path = "../biodivine-lib-bdd" }
